fixed buttons css, working in tandem with Ash on prior push to jump scroll to top of page for edit button

--- a/memelist-generator/src/index.css
+++ b/memelist-generator/src/index.css
@@ -151,16 +151,15 @@ main {
   top: 0;
 }
 
+/* #buttons{
+  display: inline-block;
+} */
 .edit-button {
-  display: inline;
+  display: inline-block;
   width: 50px;
-
+  margin-right:5px;
 }
 
-
 .delete-btn {
-  display: inline;
-  width: 50px;
-  height: 20px;
-
+  display: inline-block;  
 }
